--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="index.js"></script>
+    <nav class="navbar-contianer">
+      <div class="nav-left">
+        <img src="./image/xr-7499160_640.jpg" alt="Logo" />
+      </div>
+      <div class="nav-right">
+        <ul class="nav-list">
+          <li class="nav-item"><a href="">Home</a></li>
+          <li class="nav-item"><a href="">Ablout</a></li>
+          <li class="nav-item"><a href="">Facebook</a></li>
+          <li class="nav-item"><a href="">TikTok</a></li>
+          <li class="nav-item"><a href="">Telegram</a></li>
+        </ul>
+      </div>
+    </nav>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
