--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,10 @@
       <div class="all-contaner6"></div>
       <div class="all-contaner7"></div>
       <div class="all-contaner8"></div>
-      
+      <div class="all-contaner8"></div>
+      <div class="all-contaner8"></div>
+      <div class="all-contaner8"></div>
+      <div class="all-contaner8"></div>
     </section>
     <script src="index.js"></script>
   </body>
